--- a/www/index.css
+++ b/www/index.css
@@ -1,4 +1,9 @@
+body {
+  background-color: rgb(75, 75, 75);
+  height: 1000px;
+}
+
 div {
   width: 1100px; height: 575px;
-  margin: 12px auto 0 auto;
+  margin: 20px auto 0 auto;
 }
